Added a nav bar

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,8 +10,17 @@
   <body>
     <section class="section2">
       <div class="linesOrange">
-        <div class="orangeLine3"></div>
-        <div class="orangeLine4"></div>
+        <div class="navBars">
+          <a href="#" class="navLink"><nav class="barLink">Home</nav></a>
+          <a href="#" class="navLink"><nav class="barLink">Contact</nav></a>
+        </div>
+      </div>
+      <div class="belowTheNav">
+        <div class="orangeLine1"></div>
+        <p class="paragraph1">
+          Below are some of the projects I have previously worked on
+        </p>
+        <div class="orangeLine2"></div>
       </div>
     </section>
   </body>
