Completeing the second section

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,33 @@
         </p>
         <div class="orangeLine2"></div>
       </div>
+      <div class="projectSection">
+        <div class="webProject">
+          <h2 class="projectTitle">Web Development</h2>
+          <img class="image4" src="/assets/images/4.png" alt="" />
+          <div class="projectDescription">
+            <br />
+            <div class="projectDescriptionBackground">
+              <a class="thisLink" href="#"
+                ><nav class="thisNav">View Project</nav></a
+              >
+            </div>
+          </div>
+        </div>
+
+        <div class="webProject">
+          <h2 class="projectTitle">Graphic Design</h2>
+          <img class="image4" src="/assets/images/5.png" alt="" />
+          <div class="projectDescription">
+            <br />
+            <div class="projectDescriptionBackground">
+              <a class="thisLink" href="#"
+                ><nav class="thisNav">View Project</nav></a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
