added a third html file for contact section of my work

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <section class="one">
       <div class="main1">
         <div class="navBarMain">
-          <a class="barLinks" href="#"><nav class="mybars">Home</nav></a>
+          <a class="barLinks" href="#home"><nav class="mybars">Home</nav></a>
           <a class="barLinks" href="/portfolio.html"><nav class="mybars">Portfolio</nav></a>
+          <a class="barLinks" href="#"><nav class="mybars">About</nav></a>
+        </div>
           <a class="barLinks" href="#"><nav class="mybars">Contact</nav></a>
         </div>
       </div>
