--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,10 @@
     <section class="section2">
       <div class="linesOrange">
         <div class="navBars">
-          <a href="#" class="navLink"><nav class="barLink">Home</nav></a>
+          <a href="/index.html" class="navLink"
+            ><nav class="barLink" id="home">Home</nav></a>
+            <a href="#" class="navLink"><nav class="barLink">Portfolio</nav></a>
+            <a href="#" class="navLink"><nav class="barLink">About</nav></a>
           <a href="#" class="navLink"><nav class="barLink">Contact</nav></a>
         </div>
       </div>
@@ -49,6 +52,7 @@
           </div>
         </div>
       </div>
+      <subSection class="aboutMe"> </subSection>
     </section>
   </body>
 </html>
