working on form validation in javascript

--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,52 @@
         </div>
         <a class="barLinks" href="#"><nav class="mybars">Contact</nav></a>
       </div>
+
+      <div class="content-container-btn-orange-lines">
+        <div class="orangeLine1"></div>
+        <div class="background-Content">
+          <div class="description1">
+            <p>Software Developer & Graphic Designer based in Kenya</p>
+          </div>
+          <div class="description2">
+            <p id="para">
+              Proficient in Developing Customizable web templates and
+              experienced <br />
+              back-end guru working currently with JavaScript
+            </p>
+          </div>
+        </div>
+        <div class="orangeLine2"></div>
+      </div>
+
+      <div class="myForm">
+        <div class="formHeadliner">
+          <p class="paragraphTitle">
+            Do you have a question? Please inquire below
+          </p>
+        </div>
+        <form action="">
+          <label for="Name">Name:</label>
+          <br />
+          <input type="text" placeholder="Name" id="name1" />
+          <br />
+          <label for="Phone">Phone</label>
+          <br />
+          <input type="number" placeholder="Number" id="number" />
+          <br />
+          <label for="Message">Message:</label>
+          <br />
+          <textarea
+            name=""
+            id="message"
+            placeholder="Write your inquiries here"
+            cols="60"
+            rows="10"
+          ></textarea>
+          <br /><br />
+          <button type="submit">Submit</button>
+        </form>
+      </div>
     </section>
     <script src="/assets/css/js/index.js"></script>
   </body>
