--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <a class="barLinks" href="/portfolio.html"><nav class="mybars">Portfolio</nav></a>
           <a class="barLinks" href="#"><nav class="mybars">About</nav></a>
         </div>
-          <a class="barLinks" href="#"><nav class="mybars">Contact</nav></a>
+          <a class="barLinks" href="./contact.html"><nav class="mybars">Contact</nav></a>
         </div>
       </div>
       <div class="content-container-btn-orange-lines">
@@ -59,6 +59,6 @@
         </div>
       </div>
     </section>
-    <script src="./assets/css/js/index.js"></script>
+    
   </body>
 </html>
