--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
             ><nav class="barLink" id="home">Home</nav></a>
             <a href="#" class="navLink"><nav class="barLink">Portfolio</nav></a>
             <a href="#" class="navLink"><nav class="barLink">About</nav></a>
-          <a href="#" class="navLink"><nav class="barLink">Contact</nav></a>
+          <a href="./contact.html" class="navLink"><nav class="barLink">Contact</nav></a>
         </div>
       </div>
       <div class="belowTheNav">
