added some links

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
           <a class="barLinks" href="/portfolio.html"
             ><nav class="mybars">Portfolio</nav></a
           >
-          <a class="barLinks" href="#"><nav class="mybars">About</nav></a>
+          <a class="barLinks" id="top" href=""><nav class="mybars">About</nav></a>
         </div>
         <a class="barLinks" href="#"><nav class="mybars">Contact</nav></a>
       </div>
@@ -72,12 +72,18 @@
       <!-- ......About Me Section....... -->
       <subSection class="aboutMe">
           <div class="divider"></div>
+          <br>
+          <a class="aboutMimi" href="#about">About Me</a>
           <div class="image">
               <img src="./assets/images/background.jpg" alt="" class="Me">
               <div class="meContent">
                   <br>
-                  <a class ="gitHub" href="https://github.com/Thecodingobare" target="_blank">Daniel Okebiro Obare</a>
-
+                  <a class ="gitHub" href="https://github.com/Thecodingobare" target="_blank">Daniel Okebiro Obare ||Web Developer And Graphic Designer||</a>
+                  <br> <br> <br>
+                  <p class="mimi">
+                      I undertook a Bachelor's Degree in Economics in Kenyatta University. Am currently awaiting my graduation on December, 2022. <br> <br>
+                      As an aspiring Software Developer, I am undertaking a six month bootcamp course in Moringa. With consistency, practice and commitment in the course I am certain I will be able to complete and successfully pass the course. Above all seeking God genuinely in all things.
+                  </p>
               </div>
           </div>
       </subSection>
