--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
           <div class="projectDescription">
             <br />
             <div class="projectDescriptionBackground">
-              <a class="thisLink" href="#"
+              <a class="thisLink" href="https://github.com/Thecodingobare"
                 ><nav class="thisNav">View Project</nav></a
               >
             </div>
@@ -45,7 +45,7 @@
           <div class="projectDescription">
             <br />
             <div class="projectDescriptionBackground">
-              <a class="thisLink" href="#"
+              <a class="thisLink" href="https://www.instagram.com/accounts/login/?next=/martoh.incognitoh/"
                 ><nav class="thisNav">View Project</nav></a
               >
             </div>
