--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
           <div class="projectDescription">
             <br />
             <div class="projectDescriptionBackground">
-              <a class="thisLink" href="https://github.com/Thecodingobare"
+              <a class="thisLink" href="https://github.com/Thecodingobare" target="blank"
                 ><nav class="thisNav">View Project</nav></a
               >
             </div>
@@ -41,11 +41,11 @@
 
         <div class="webProject">
           <h2 class="projectTitle">Graphic Design</h2>
-          <img class="image4" src="/assets/images/5.png" alt="" />
+          <img class="image4" src="/assets/images/5.png" target="blank" alt="" />
           <div class="projectDescription">
             <br />
             <div class="projectDescriptionBackground">
-              <a class="thisLink" href="https://www.instagram.com/accounts/login/?next=/martoh.incognitoh/"
+              <a class="thisLink" href="https://www.instagram.com/accounts/login/?next=/martoh.incognitoh/" target="blank"
                 ><nav class="thisNav">View Project</nav></a
               >
             </div>
