--- a/contact.html
+++ b/contact.html
@@ -43,19 +43,19 @@
             Do you have a question? Please inquire below
           </p>
         </div>
-        <div id="error"></div>
-        <form action="./index.html" onsubmit = "validate()">
-          <label for="Name">Name:
-          <br />
+        <div id="structure">
+        <form action="./index.html" onsubmit = "return validate()">
+          <label for="Name" class="label1">Name:
+          <br /> 
           <input type="text" placeholder="Name" id="name1" name="name"/>
           </label>
           <br />
-          <label for="Phone">Phone
+          <label class="label2" for="Phone">Phone
           <br />
           <input type="number" placeholder="Number" id="number" name="number" />
           </label>
           <br />
-          <label for="Message">Message:
+          <label class="label3" for="Message">Message:
           <br />
           <textarea
             name="message"
@@ -65,10 +65,11 @@
             rows="10"
           ></textarea>
           </label>
-          l
+        
           <br /><br />
-          <button type="submit">Submit</button>
+          <button class="button" type="submit">Submit</button>
         </form>
+        </div>
       </div>
       <!-- ......About Me Section....... -->
       <subSection class="aboutMe">
