--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Website</title>
-    <link rel="stylesheet" href="./assets/css/index.css" />
+    <link rel="stylesheet" href="/assets/css/index.css" />
   </head>
   <body>
     <section class="one">
@@ -37,7 +37,7 @@
       <div class="section1-images-description-container">
         <div class="image-plus-description">
           <div class="image-content">
-            <img src="/assets/images/2.png" class="image-2" alt="" />
+            <img src="./assets/images/2.png" class="image-2" alt="" />
             <div class="background-for-image-content">
               <p class="paragraph-content">
                 Passionate about art <br />
@@ -48,7 +48,7 @@
         </div>
         <div class="image-plus-description">
           <div class="image-content">
-            <img src="/assets/images/3.jpg" class="image-2" alt="" />
+            <img src="./assets/images/3.jpg" class="image-2" alt="" />
             <div class="background-for-image-content">
               <p class="paragraph-content">
                 Social and friendly<br />
