--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
       <div class="projectSection">
         <div class="webProject">
           <h2 class="projectTitle">Web Development</h2>
-          <img class="image4" src="/assets/images/4.png" alt="" />
+          <img class="image4" src="./assets/images/4.png" alt="" />
           <div class="projectDescription">
             <br />
             <div class="projectDescriptionBackground">
@@ -41,7 +41,7 @@
 
         <div class="webProject">
           <h2 class="projectTitle">Graphic Design</h2>
-          <img class="image4" src="/assets/images/5.png" target="blank" alt="" />
+          <img class="image4" src="./assets/images/5.png" target="blank" alt="" />
           <div class="projectDescription">
             <br />
             <div class="projectDescriptionBackground">
